--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -81,3 +81,5 @@ add_subdirectory(DSP)
 add_subdirectory(GUI)
 add_subdirectory(Plugins)
 add_subdirectory(Utilities)
+add_subdirectory(kasm_unify/FXP)
+add_subdirectory(kasm_unify/Diva)
