Kasm Unifier (multi instrument/effects)

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -81,3 +81,6 @@ add_subdirectory(DSP)
 add_subdirectory(GUI)
 add_subdirectory(Plugins)
 add_subdirectory(Utilities)
+add_subdirectory(kasm_unify/FXP)
+add_subdirectory(kasm_unify/Diva)
+add_subdirectory(kasm_unify/Kasm\ Unifier)
