--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -81,6 +81,4 @@ add_subdirectory(DSP)
 add_subdirectory(GUI)
 add_subdirectory(Plugins)
 add_subdirectory(Utilities)
-add_subdirectory(kasm_unify/FXP)
-add_subdirectory(kasm_unify/Diva)
-add_subdirectory(kasm_unify/Kasm\ Unifier)
+add_subdirectory(Kasm\ Unifier)
